non-helm/mosquitto/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-ws
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - port: 9001
